k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-app
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /0
        pathType: Prefix
        backend:
          service:
            name: fastapi-app
            port: 
              number: 80
      - path: /1
        pathType: Prefix
        backend:
          service:
            name: fastapi-app
            port: 
              number: 80
      - path: /2
        pathType: Prefix
        backend:
          service:
            name: fastapi-app
            port: 
              number: 80
